--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.5.0",
     "apollo-server": "^3.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^15.5.1",
-    "nexus": "^1.1.0"
+    "nexus": "^1.1.0",
+    "prisma": "^3.5.0"
   }
 }
